@@ -1,122 +1,111 @@
 package com.kas.online_book_shop;
 
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyLong;
-import static org.mockito.Mockito.doNothing;
-import static org.mockito.Mockito.times;
-import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.when;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.put;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.delete;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
-
-import java.time.LocalDateTime;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
-
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.DisplayName;
-import org.junit.jupiter.api.Test;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
-import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.boot.test.mock.mockito.MockBean;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageImpl;
-import org.springframework.data.domain.PageRequest;
-import org.springframework.data.domain.Pageable;
-import org.springframework.http.MediaType;
-import org.springframework.security.test.context.support.WithMockUser;
-import org.springframework.test.web.servlet.MockMvc;
-
-import com.fasterxml.jackson.databind.ObjectMapper;
+import com.kas.online_book_shop.controller.CartController;
+import com.kas.online_book_shop.controller.FeedbackController;
+import com.kas.online_book_shop.controller.OrderController;
 import com.kas.online_book_shop.dto.OrderDetailDTO;
 import com.kas.online_book_shop.enums.OrderState;
 import com.kas.online_book_shop.enums.PaymentState;
 import com.kas.online_book_shop.enums.ShippingState;
-import com.kas.online_book_shop.model.Book;
-import com.kas.online_book_shop.model.Feedback;
-import com.kas.online_book_shop.model.Order;
-import com.kas.online_book_shop.model.OrderDetail;
-import com.kas.online_book_shop.model.User;
+import com.kas.online_book_shop.model.*;
 import com.kas.online_book_shop.service.CartService;
 import com.kas.online_book_shop.service.FeedbackService;
 import com.kas.online_book_shop.service.OrderService;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.DisplayName;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.InjectMocks;
+import org.mockito.Mock;
+import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
+
+import java.time.LocalDateTime;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.List;
+
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyLong;
+import static org.mockito.Mockito.*;
 
 /**
  * Unit Test cho Customer - Vũ
  * Chức năng: Cart/Order/Feedback
  */
-@SpringBootTest
-@AutoConfigureMockMvc
+@ExtendWith(MockitoExtension.class)
 @DisplayName("Customer Functionality Test - Vũ")
 public class CustomerFunctionalityTest {
 
-    @Autowired
-    private MockMvc mockMvc;
-
-    @Autowired
-    private ObjectMapper objectMapper;
-
-    @MockBean
+    @Mock
     private CartService cartService;
 
-    @MockBean
+    @Mock
     private OrderService orderService;
 
-    @MockBean
+    @Mock
     private FeedbackService feedbackService;
+
+    @InjectMocks
+    private CartController cartController;
+
+    @InjectMocks
+    private OrderController orderController;
+
+    @InjectMocks
+    private FeedbackController feedbackController;
 
     private Order testOrder;
     private Order testCart;
     private Feedback testFeedback;
-    private User testUser;
-    private Book testBook;
-    private OrderDetail testOrderDetail;
     private OrderDetailDTO orderDetailDTO;
 
     @BeforeEach
     void setUp() {
         // Setup user
-        testUser = new User();
+        User testUser = new User();
         testUser.setId(1L);
         testUser.setEmail("customer@example.com");
         testUser.setFullName("Test Customer");
 
         // Setup book
-        testBook = new Book();
+        Book testBook = new Book();
         testBook.setId(1L);
         testBook.setTitle("Test Book");
-        testBook.setPrice(100.0);
-        testBook.setQuantity(10);
+        testBook.setPrice(100L);
+        testBook.setStock(10);
 
         // Setup order detail
-        testOrderDetail = new OrderDetail();
+        OrderDetail testOrderDetail = new OrderDetail();
         testOrderDetail.setId(1L);
         testOrderDetail.setBook(testBook);
-        testOrderDetail.setQuantity(2);
-        testOrderDetail.setPrice(200.0);
+        testOrderDetail.setAmount(2);
+        testOrderDetail.setOriginalPrice(100L);
+        testOrderDetail.setSalePrice(100L);
 
         // Setup order
         testOrder = new Order();
         testOrder.setId(1L);
         testOrder.setUser(testUser);
-        testOrder.setOrderState(OrderState.PROCESSING);
+        testOrder.setState(OrderState.PROCESSING);
         testOrder.setPaymentState(PaymentState.PENDING);
-        testOrder.setShippingState(ShippingState.PREPARING);
-        testOrder.setOrderDate(LocalDateTime.now());
-        testOrder.setTotalPrice(200.0);
-        testOrder.setOrderDetails(Arrays.asList(testOrderDetail));
+        testOrder.setShippingState(ShippingState.NOTSHIPPING);
+        testOrder.setCreated(LocalDateTime.now());
+        testOrder.setShippingPrice(20000L);
+        testOrder.setOrderDetails(List.of(testOrderDetail));
 
         // Setup cart
         testCart = new Order();
         testCart.setId(2L);
         testCart.setUser(testUser);
-        testCart.setOrderState(OrderState.CART);
+        testCart.setState(OrderState.CART);
         testCart.setOrderDetails(new ArrayList<>());
 
         // Setup feedback
@@ -124,8 +113,8 @@ public class CustomerFunctionalityTest {
         testFeedback.setId(1L);
         testFeedback.setUser(testUser);
         testFeedback.setBook(testBook);
-        testFeedback.setContent("Great book!");
-        testFeedback.setCreatedDate(LocalDateTime.now());
+        testFeedback.setComment("Great book!");
+        testFeedback.setCreatedAt(LocalDateTime.now());
 
         // Setup DTO
         orderDetailDTO = new OrderDetailDTO(1L, 1L, 2);
@@ -135,154 +124,160 @@ public class CustomerFunctionalityTest {
 
     @Test
     @DisplayName("Test 1: Get Cart - Lấy giỏ hàng theo user")
-    @WithMockUser(username = "customer@example.com", roles = {"CUSTOMER"})
-    void testGetCartByUser() throws Exception {
+    void testGetCartByUser()  {
         // Given
         when(cartService.getCartByUser(anyLong())).thenReturn(testCart);
 
-        // When & Then
-        mockMvc.perform(get("/api/v1/cart/by-user/1")
-                        .contentType(MediaType.APPLICATION_JSON))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.id").value(2L))
-                .andExpect(jsonPath("$.orderState").value("CART"));
+        // When
+        ResponseEntity<Order> response = cartController.getCartByUser(1L);
 
-        verify(cartService, times(1)).getCartByUser(anyLong());
+        // Then
+        assertNotNull(response);
+        assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertNotNull(response.getBody());
+        assertEquals(2L, response.getBody().getId());
+        assertEquals(OrderState.CART, response.getBody().getState());
+        verify(cartService, times(1)).getCartByUser(1L);
     }
 
     @Test
     @DisplayName("Test 2: Get All Carts - Lấy tất cả giỏ hàng")
-    @WithMockUser(username = "admin@example.com", roles = {"ADMIN"})
-    void testGetAllCarts() throws Exception {
+    void testGetAllCarts()  {
         // Given
-        List<Order> carts = Arrays.asList(testCart);
+        List<Order> carts = Collections.singletonList(testCart);
         when(cartService.getAllCart()).thenReturn(carts);
 
-        // When & Then
-        mockMvc.perform(get("/api/v1/cart")
-                        .contentType(MediaType.APPLICATION_JSON))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$[0].id").value(2L));
+        // When
+        ResponseEntity<List<Order>> response = cartController.getAllCart();
 
+        // Then
+        assertNotNull(response);
+        assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertNotNull(response.getBody());
+        assertEquals(1, response.getBody().size());
+        assertEquals(2L, response.getBody().get(0).getId());
         verify(cartService, times(1)).getAllCart();
     }
 
     @Test
     @DisplayName("Test 3: Add to Cart - Thêm sản phẩm vào giỏ hàng")
-    @WithMockUser(username = "customer@example.com", roles = {"CUSTOMER"})
-    void testAddToCart() throws Exception {
+    void testAddToCart()  {
         // Given
         doNothing().when(cartService).addToCart(any(OrderDetailDTO.class));
 
-        // When & Then
-        mockMvc.perform(post("/api/v1/cart/add")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(orderDetailDTO)))
-                .andExpect(status().isNoContent());
+        // When
+        ResponseEntity<Void> response = cartController.addCart(orderDetailDTO);
 
+        // Then
+        assertNotNull(response);
+        assertEquals(HttpStatus.NO_CONTENT, response.getStatusCode());
         verify(cartService, times(1)).addToCart(any(OrderDetailDTO.class));
     }
 
     @Test
     @DisplayName("Test 4: Update Cart - Cập nhật giỏ hàng")
-    @WithMockUser(username = "customer@example.com", roles = {"CUSTOMER"})
-    void testUpdateCart() throws Exception {
+    void testUpdateCart()  {
         // Given
         doNothing().when(cartService).updateCart(any(Order.class));
 
-        // When & Then
-        mockMvc.perform(put("/api/v1/cart")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(testCart)))
-                .andExpect(status().isNoContent());
+        // When
+        ResponseEntity<Void> response = cartController.updateUserCart(testCart);
 
+        // Then
+        assertNotNull(response);
+        assertEquals(HttpStatus.NO_CONTENT, response.getStatusCode());
         verify(cartService, times(1)).updateCart(any(Order.class));
     }
 
     @Test
     @DisplayName("Test 5: Add to Cart - Thêm sản phẩm với số lượng không hợp lệ")
-    @WithMockUser(username = "customer@example.com", roles = {"CUSTOMER"})
-    void testAddToCartWithInvalidQuantity() throws Exception {
+    void testAddToCartWithInvalidQuantity()  {
         // Given
         OrderDetailDTO invalidDTO = new OrderDetailDTO(1L, 1L, -1);  // Invalid quantity
         doNothing().when(cartService).addToCart(any(OrderDetailDTO.class));
 
-        // When & Then
-        mockMvc.perform(post("/api/v1/cart/add")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(invalidDTO)))
-                .andExpect(status().isNoContent());  // Note: Should add validation
+        // When
+        ResponseEntity<Void> response = cartController.addCart(invalidDTO);
+
+        // Then
+        assertNotNull(response);
+        assertEquals(HttpStatus.NO_CONTENT, response.getStatusCode());  // Note: Should add validation
+        verify(cartService, times(1)).addToCart(any(OrderDetailDTO.class));
     }
 
     // ==================== ORDER TESTS ====================
 
     @Test
     @DisplayName("Test 6: Get Order by User - Lấy đơn hàng theo user")
-    @WithMockUser(username = "customer@example.com", roles = {"CUSTOMER"})
-    void testGetOrderByUser() throws Exception {
+    void testGetOrderByUser()  {
         // Given
-        List<Order> orders = Arrays.asList(testOrder);
+        List<Order> orders = Collections.singletonList(testOrder);
         when(orderService.getOrderByUser(anyLong())).thenReturn(orders);
 
-        // When & Then
-        mockMvc.perform(get("/api/v1/order/user/1")
-                        .contentType(MediaType.APPLICATION_JSON))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$[0].id").value(1L))
-                .andExpect(jsonPath("$[0].orderState").value("PROCESSING"));
+        // When
+        ResponseEntity<List<Order>> response = orderController.getOrderByUser(1L);
 
-        verify(orderService, times(1)).getOrderByUser(anyLong());
+        // Then
+        assertNotNull(response);
+        assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertNotNull(response.getBody());
+        assertEquals(1, response.getBody().size());
+        assertEquals(1L, response.getBody().get(0).getId());
+        assertEquals(OrderState.PROCESSING, response.getBody().get(0).getState());
+        verify(orderService, times(1)).getOrderByUser(1L);
     }
 
     @Test
     @DisplayName("Test 7: Process Order - Xử lý đơn hàng")
-    @WithMockUser(username = "customer@example.com", roles = {"CUSTOMER"})
-    void testProcessOrder() throws Exception {
+    void testProcessOrder()  {
         // Given
         doNothing().when(orderService).changeOrderState(anyLong(), any(OrderState.class));
         doNothing().when(orderService).processOrder(any(Order.class));
 
-        // When & Then
-        mockMvc.perform(post("/api/v1/order/process")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(testOrder)))
-                .andExpect(status().isNoContent());
+        // When
+        ResponseEntity<Void> response = orderController.processOrder(testOrder);
 
+        // Then
+        assertNotNull(response);
+        assertEquals(HttpStatus.NO_CONTENT, response.getStatusCode());
         verify(orderService, times(1)).changeOrderState(anyLong(), any(OrderState.class));
         verify(orderService, times(1)).processOrder(any(Order.class));
     }
 
     @Test
     @DisplayName("Test 8: Get Order by ID - Lấy đơn hàng theo ID")
-    @WithMockUser(username = "customer@example.com", roles = {"CUSTOMER"})
-    void testGetOrderById() throws Exception {
+    void testGetOrderById()  {
         // Given
         when(orderService.getOrderById(anyLong())).thenReturn(testOrder);
 
-        // When & Then
-        mockMvc.perform(get("/api/v1/order/1")
-                        .contentType(MediaType.APPLICATION_JSON))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.id").value(1L))
-                .andExpect(jsonPath("$.totalPrice").value(200.0));
+        // When
+        ResponseEntity<Order> response = orderController.getOrderById(1L);
 
-        verify(orderService, times(1)).getOrderById(anyLong());
+        // Then
+        assertNotNull(response);
+        assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertNotNull(response.getBody());
+        assertEquals(1L, response.getBody().getId());
+        assertNotNull(response.getBody().getTotalPrice());
+        verify(orderService, times(1)).getOrderById(1L);
     }
 
     @Test
     @DisplayName("Test 9: Get All Orders - Lấy tất cả đơn hàng")
-    @WithMockUser(username = "admin@example.com", roles = {"ADMIN"})
-    void testGetAllOrders() throws Exception {
+    void testGetAllOrders()  {
         // Given
-        List<Order> orders = Arrays.asList(testOrder);
+        List<Order> orders = Collections.singletonList(testOrder);
         when(orderService.getAll()).thenReturn(orders);
 
-        // When & Then
-        mockMvc.perform(get("/api/v1/order/get-all")
-                        .contentType(MediaType.APPLICATION_JSON))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$[0].id").value(1L));
+        // When
+        ResponseEntity<List<Order>> response = orderController.getAll();
 
+        // Then
+        assertNotNull(response);
+        assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertNotNull(response.getBody());
+        assertEquals(1, response.getBody().size());
+        assertEquals(1L, response.getBody().get(0).getId());
         verify(orderService, times(1)).getAll();
     }
 
@@ -290,109 +285,111 @@ public class CustomerFunctionalityTest {
 
     @Test
     @DisplayName("Test 10: Get All Feedbacks - Lấy tất cả feedback")
-    @WithMockUser(username = "customer@example.com", roles = {"CUSTOMER"})
-    void testGetAllFeedbacks() throws Exception {
+    void testGetAllFeedbacks()  {
         // Given
-        List<Feedback> feedbacks = Arrays.asList(testFeedback);
+        List<Feedback> feedbacks = Collections.singletonList(testFeedback);
         when(feedbackService.getAllFeedbacks()).thenReturn(feedbacks);
 
-        // When & Then
-        mockMvc.perform(get("/api/v1/feedback")
-                        .contentType(MediaType.APPLICATION_JSON))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$[0].id").value(1L))
-                .andExpect(jsonPath("$[0].content").value("Great book!"));
+        // When
+        ResponseEntity<List<Feedback>> response = feedbackController.getAllFeedbacks();
 
+        // Then
+        assertNotNull(response);
+        assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertNotNull(response.getBody());
+        assertEquals(1, response.getBody().size());
+        assertEquals(1L, response.getBody().get(0).getId());
+        assertEquals("Great book!", response.getBody().get(0).getComment());
         verify(feedbackService, times(1)).getAllFeedbacks();
     }
 
     @Test
     @DisplayName("Test 11: Get Feedback by ID - Lấy feedback theo ID")
-    @WithMockUser(username = "customer@example.com", roles = {"CUSTOMER"})
-    void testGetFeedbackById() throws Exception {
+    void testGetFeedbackById()  {
         // Given
         when(feedbackService.getFeedbackById(anyLong())).thenReturn(testFeedback);
 
-        // When & Then
-        mockMvc.perform(get("/api/v1/feedback/1")
-                        .contentType(MediaType.APPLICATION_JSON))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.id").value(1L))
-                .andExpect(jsonPath("$.content").value("Great book!"));
+        // When
+        ResponseEntity<Feedback> response = feedbackController.getFeedbackById(1L);
 
-        verify(feedbackService, times(1)).getFeedbackById(anyLong());
+        // Then
+        assertNotNull(response);
+        assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertNotNull(response.getBody());
+        assertEquals(1L, response.getBody().getId());
+        assertEquals("Great book!", response.getBody().getComment());
+        verify(feedbackService, times(1)).getFeedbackById(1L);
     }
 
     @Test
     @DisplayName("Test 12: Save Feedback - Tạo feedback mới")
-    @WithMockUser(username = "customer@example.com", roles = {"CUSTOMER"})
-    void testSaveFeedback() throws Exception {
+    void testSaveFeedback()  {
         // Given
         when(feedbackService.saveFeedback(any(Feedback.class))).thenReturn(testFeedback);
 
-        // When & Then
-        mockMvc.perform(post("/api/v1/feedback")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(testFeedback)))
-                .andExpect(status().isCreated())
-                .andExpect(jsonPath("$.id").value(1L))
-                .andExpect(jsonPath("$.content").value("Great book!"));
+        // When
+        ResponseEntity<Feedback> response = feedbackController.saveFeedback(testFeedback);
 
+        // Then
+        assertNotNull(response);
+        assertEquals(HttpStatus.CREATED, response.getStatusCode());
+        assertNotNull(response.getBody());
+        assertEquals(1L, response.getBody().getId());
+        assertEquals("Great book!", response.getBody().getComment());
         verify(feedbackService, times(1)).saveFeedback(any(Feedback.class));
     }
 
     @Test
     @DisplayName("Test 13: Update Feedback - Cập nhật feedback")
-    @WithMockUser(username = "customer@example.com", roles = {"CUSTOMER"})
-    void testUpdateFeedback() throws Exception {
+    void testUpdateFeedback()  {
         // Given
-        testFeedback.setContent("Updated feedback!");
+        testFeedback.setComment("Updated feedback!");
         when(feedbackService.updateFeedback(any(Feedback.class))).thenReturn(testFeedback);
 
-        // When & Then
-        mockMvc.perform(put("/api/v1/feedback")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(testFeedback)))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.content").value("Updated feedback!"));
+        // When
+        ResponseEntity<Feedback> response = feedbackController.updateFeedback(testFeedback);
 
+        // Then
+        assertNotNull(response);
+        assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertNotNull(response.getBody());
+        assertEquals("Updated feedback!", response.getBody().getComment());
         verify(feedbackService, times(1)).updateFeedback(any(Feedback.class));
     }
 
     @Test
     @DisplayName("Test 14: Delete Feedback - Xóa feedback")
-    @WithMockUser(username = "customer@example.com", roles = {"CUSTOMER"})
-    void testDeleteFeedback() throws Exception {
+    void testDeleteFeedback()  {
         // Given
         doNothing().when(feedbackService).deleteFeedback(anyLong());
 
-        // When & Then
-        mockMvc.perform(delete("/api/v1/feedback/1")
-                        .contentType(MediaType.APPLICATION_JSON))
-                .andExpect(status().isNoContent());
+        // When
+        ResponseEntity<Void> response = feedbackController.deleteFeedback(1L);
 
-        verify(feedbackService, times(1)).deleteFeedback(anyLong());
+        // Then
+        assertNotNull(response);
+        assertEquals(HttpStatus.NO_CONTENT, response.getStatusCode());
+        verify(feedbackService, times(1)).deleteFeedback(1L);
     }
 
     @Test
     @DisplayName("Test 15: Get Feedbacks Paged and Sorted - Lấy feedback phân trang và sắp xếp")
-    @WithMockUser(username = "customer@example.com", roles = {"CUSTOMER"})
-    void testGetFeedbacksPagedAndSorted() throws Exception {
+    void testGetFeedbacksPagedAndSorted()  {
         // Given
-        List<Feedback> feedbacks = Arrays.asList(testFeedback);
+        List<Feedback> feedbacks = Collections.singletonList(testFeedback);
         Page<Feedback> feedbackPage = new PageImpl<>(feedbacks, PageRequest.of(0, 5), 1);
         when(feedbackService.getAllFeedbacks(any(Pageable.class))).thenReturn(feedbackPage);
 
-        // When & Then
-        mockMvc.perform(get("/api/v1/feedback/sorted-and-paged")
-                        .param("page", "0")
-                        .param("size", "5")
-                        .param("sortBy", "id")
-                        .param("sortOrder", "asc")
-                        .contentType(MediaType.APPLICATION_JSON))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.content[0].id").value(1L));
+        // When
+        ResponseEntity<Page<Feedback>> response = feedbackController.getAllFeedbacksPagedAndSorted(
+                "id", 0, 5, "asc");
 
+        // Then
+        assertNotNull(response);
+        assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertNotNull(response.getBody());
+        assertEquals(1, response.getBody().getContent().size());
+        assertEquals(1L, response.getBody().getContent().get(0).getId());
         verify(feedbackService, times(1)).getAllFeedbacks(any(Pageable.class));
     }
 }
